src/test/ui/half-open-range-patterns/exclusive_range_pattern_syntax_collision3.stderr
error[E0308]: mismatched types
  --> $DIR/exclusive_range_pattern_syntax_collision3.rs:6:12
   |
LL |         [..9, 99..100, _] => {},
   |            ^ expected struct `std::ops::Range`, found integer
   |
   = note: expected struct `std::ops::Range<{integer}>`
                found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/exclusive_range_pattern_syntax_collision3.rs:6:15
   |
LL |         [..9, 99..100, _] => {},
   |               ^^  --- this is of type `{integer}`
   |               |
   |               expected struct `std::ops::Range`, found integer
   |
   = note: expected struct `std::ops::Range<{integer}>`
                found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/exclusive_range_pattern_syntax_collision3.rs:6:19
   |
LL |         [..9, 99..100, _] => {},
   |               --  ^^^ expected struct `std::ops::Range`, found integer
   |               |
   |               this is of type `{integer}`
   |
   = note: expected struct `std::ops::Range<{integer}>`
                found type `{integer}`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
